Rename Main.unity to Main2.unity and update scripts
Renamed the Main.unity scene and its meta file to Main2.unity. Updated scene objects to use new TaskList and SoundManager components, refactored Player and Banana GameObjects, and added TaskList.cs. Adjusted PickUp and SoundManager scripts to match new scene structure.

--- a/.gitignore
+++ b/.gitignore
@@ -81,3 +81,4 @@ mono_crash.*
 # Optional: Asset Store Tools (uncomment if you don't want it tracked)
 # /[Aa]ssets/AssetStoreTools*
 /Assets/_Recovery
+Assets/_Recovery.meta
